test/errors/error2.base
Invalid left hand side of assignment
fun foo() {
   1 = 1;
   ^
